styles/main.css
main {
  grid-area: main;
  background: #edf2f6;
}

.job-info {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-areas: "job-description-block job-description-block social-buttons-and-inputs" "job-description-block job-description-block social-buttons-and-inputs" "job-description-block job-description-block social-buttons-and-inputs";
  padding: 0 2% 2% 5%;
}

.job-description-block {
  grid-area: job-description-block;
  margin: 0 3% 0 0;
  width: 100%;
  background: #FFF;
}

.job-description-block dl {
  display: grid;
  grid-template-columns: 1fr 2fr;
  padding: 0 5%;
}

.job-description-block dt {
  border-bottom: 2px solid #c4ccd2;
  grid-column: 1 / 2;
  margin: 0;
  padding: 18% 0;
  width: 100%;
  color: #7d8a9f;
  font-weight: bold;
}

.job-description-block dd {
  border-bottom: 2px solid #c4ccd2;
  grid-column: 2 / 3;
  height: auto;
  margin: 0;
  padding: 9% 0;
  color: #7d8a9f;
}

#approved-salary,
#approved-salary-definition {
  border: none;
}

.hiring-lead {
  align-items: center;
  display: flex;
}

.hiring-lead-profile {
  align-items: center;
  display: flex;
}

.small-profile {
  border-radius: 50%;
  height: 40px;
  margin: 2%;
  width: 40px;
}

.job-description {
  align-items: center;
  border-radius: 2% 2% 0 0;
  display: flex;
  height: 10%;
  margin: 0;
  width: 100%;
  background: #717d93;
}

.job-description-title {
  margin: 0 8% 0 5%;
  color: #FFF;
}

.edit-button {
  height: 50px;
  margin: 2%;
  padding: 0;
  width: 100px;
  background: #7e8ba4;
  color: #FFF;
}

.edit-button:hover {
  background-color: #98A3B6;
}

.edit-button img {
  height: 15px;
  margin: 0 5% 0 0;
  width: 15px;
}

.social-buttons-and-inputs {
  grid-area: social-buttons-and-inputs;
  margin: 0 10%;
}

.social-button {
  align-items: center;
  border-radius: 5px;
  display: flex;
  height: 7%;
  justify-content: center;
  margin: 5% 0;
  width: 100%;
}

.social-button img {
  height: 20px;
  margin-right: 5%;
  width: 20px;
}

.facebook {
  margin-top: 0;
  background: #5070bb;
}

.facebook:hover { background: #738ECA; }
.twitter { background: #47a8e9; }
.twitter:hover { background: #6CBBED; }
.linkedin { background: #337eb6; }
.linkedin:hover { background: #5C99C6; }

.inputs-area img {
  height: 25px;
  width: 25px;
}

.inputs-area h3 {
  display: inline-block;
  margin: 0;
  font-size: 1.5rem;
  color: #7b8392;
}

.inputs-area-title {
  display: flex;
  align-items: center;
}

.inputs-area p { color: #7b8392; }
.inputs-area hr { margin: 12% 0; }
.link-to-this-job { margin-top: 10%; }

.link-or-code-with-button {
  display: flex;
  box-shadow: 0 1px 2px #dbe0e3;
}

.copy-button {
  border-radius: 0 5px 5px 0;
  height: 40px;
  padding: 0;
  text-align: center;
  width: 50px;
  background: #67b8bf;
}

.copy-button:hover {
  background: #85C6CB;
}

.link-to-copy,
.code-to-copy,
.tim-email {
  align-items: center;
  border-radius: 5px;
  display: flex;
  height: 40px;
  overflow-x: scroll;
  padding-left: 5%;
  white-space: nowrap;
  width: 83%;
  background: #FFF;
  color: #7b8392;
}

.tim-email {
  width: 100%;
}

.link-to-copy span,
.code-to-copy span,
.tim-email span {
  width: 66%;
}

.link-to-copy button,
.code-to-copy button {
  float: right;
}

